--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="button-container">
     <a href="https://example.com" target="_blank">
       <button class="button">
-        <img src="button-image.png" alt="Button" width="100" height="100">
+        <img src="icons8-italy-100.png" alt="Button" width="100" height="100">
       </button>
     </a>
     <a href="https://example.com" target="_blank">
