--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
       border-radius: 4px;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
       transition: transform 0.3s ease-in-out;
+      outline: none;
+    }
+    
+    .button img {
+      border: none;
     }
     
     .button:hover {
