--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       cursor: pointer;
       margin: 10px;
       border-radius: 4px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      box-shadow: none;
       transition: transform 0.3s ease-in-out;
       outline: none;
     }
