--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
   <style>
     body {
       display: flex;
@@ -39,10 +40,19 @@
       opacity: 0.8;
     }
     
+    .text-above-buttons {
+      font-size: 24px;
+      font-weight: bold;
+      color: #333;
+      margin-bottom: 20px;
+      font-family: 'Bad Script', cursive;
+    }
+    
   </style>
 </head>
 <body>
   <div class="button-container">
+    <h2 class="text-above-buttons">18 Maggio 2024</h2>
     <a href="https://example.com" target="_blank">
       <button class="button">
         <img src="icons8-italy-100.png" alt="Button" width="100" height="100">
