--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
   <div class="button-container">
     <h2 class="text-above-buttons">18 Maggio 2024</h2>
-    <a href="https://example.com" target="_blank">
+    <a href="https://www.matrimonio.com/web/pestoebaba" target="_blank">
       <button class="button">
         <img src="icons8-italy-100.png" alt="Button" width="100" height="100">
       </button>
