--- a/index.html
+++ b/index.html
@@ -47,10 +47,33 @@
       margin-bottom: 20px;
       font-family: 'Bad Script', cursive;
     }
+
+    .bell-container {
+      position: relative;
+      width: 200px; /* Adjust the width to fit your bell image */
+      height: 200px; /* Adjust the height to fit your bell image */
+      overflow: hidden;
+    }
+
+    .bell {
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform-origin: bottom center;
+      animation: pendulumRotation 2s ease-in-out infinite alternate;
+    }
+
+    @keyframes pendulumRotation {
+      0% { transform: rotate(5deg); }
+      100% { transform: rotate(-5deg); }
+    }
     
   </style>
 </head>
 <body>
+  <div class="bell-container">
+    <img class="bell" src="bell.png" alt="Bell">
+  </div>
   <div class="button-container">
     <h2 class="text-above-buttons">18 Maggio 2024</h2>
     <a href="https://www.matrimonio.com/web/pestoebaba" target="_blank">
