--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
       font-family: 'Bad Script', cursive;
     }
 
+    .larger-text {
+      font-size: 36px;
+      font-weight: bold;
+      color: #555;
+      font-family: 'Bad Script', cursive;
+    }
+
     .bell-container {
       position: relative;
       width: 200px; /* Adjust the width to fit your bell image */
@@ -75,6 +82,7 @@
     <img class="bell" src="bell.png" alt="Bell">
   </div>
   <div class="button-container">
+    <h1 class="larger-text">Simone & Giulia</h1>
     <h2 class="text-above-buttons">18 Maggio 2024</h2>
     <a href="https://www.matrimonio.com/web/pestoebaba" target="_blank">
       <button class="button">
