--- a/index.html
+++ b/index.html
@@ -64,38 +64,13 @@
       margin-right: 10px; /* Adjust the distance from the text */
       margin-left: 10px; /* Adjust the distance from the text */
     }
-
-    .bell-container {
-      position: relative;
-      width: 200px; /* Adjust the width to fit your bell image */
-      height: 200px; /* Adjust the height to fit your bell image */
-      overflow: hidden;
-    }
-
-    .bell {
-      position: absolute;
-      top: 0;
-      left: 50%;
-      transform-origin: bottom center;
-      animation: pendulumRotation 0.5s ease-in-out infinite alternate;
-    }
-
-    @keyframes pendulumRotation {
-      0% { transform: rotate(7deg); }
-      100% { transform: rotate(-7deg); }
-    }
     
   </style>
 </head>
 <body>
-  <div class="bell-container">
-    <img class="bell" src="bell.png" alt="Bell">
-  </div>
   <div class="button-container">
     <h1 class="larger-text">
-      <span class="small-picture"></span>
-      Simone Giulia
-      <span class="small-picture"></span>
+      Simone <span class="small-picture"></span> Giulia
     </h1>
     <h2 class="text-above-buttons">18 Maggio 2024</h2>
     <a href="https://www.matrimonio.com/web/pestoebaba" target="_blank">
