--- a/index.html
+++ b/index.html
@@ -56,9 +56,6 @@
     }
 
     .small-picture {
-      background-image: url('ring.png');
-      background-repeat: no-repeat;
-      background-size: contain;
       width: 40px; /* Adjust the size of the small picture */
       height: 40px; /* Adjust the size of the small picture */
       margin-right: 10px; /* Adjust the distance from the text */
@@ -70,7 +67,7 @@
 <body>
   <div class="button-container">
     <h1 class="larger-text">
-      Simone <span class="small-picture"></span> Giulia
+      Simone <img class="small-picture" src="ring.png" alt="Small Picture"> Giulia
     </h1>
     <h2 class="text-above-buttons">18 Maggio 2024</h2>
     <a href="https://www.matrimonio.com/web/pestoebaba" target="_blank">
