--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
   <div class="button-container">
-    <h1 class="larger-text">
+    <h1 class="main-text">
       Simone <img class="small-picture" src="ring.png" alt="Small Picture"> Giulia
     </h1>
     <h2 class="text-above-buttons">18 Maggio 2024</h2>
