--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
     .small-picture {
       width: 38px; /* Adjust the size of the small picture */
       height: 38px; /* Adjust the size of the small picture */
-      margin-right: 4px; /* Adjust the distance from the text */
-      margin-left: 4px; /* Adjust the distance from the text */
+      vertical-align: middle; 
+      margin-right: 2px; /* Adjust the distance from the text */
+      margin-left: 2px; /* Adjust the distance from the text */
     }
     
   </style>
