--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     .small-picture {
       width: 38px; /* Adjust the size of the small picture */
       height: 38px; /* Adjust the size of the small picture */
-      vertical-align: middle; 
+      vertical-align: -10px; 
       margin-right: 2px; /* Adjust the distance from the text */
       margin-left: 2px; /* Adjust the distance from the text */
     }
