--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
     <h2 class="text-above-buttons">18 Maggio 2024</h2>
     <a href="https://www.matrimonio.com/web/pestoebaba" target="_blank">
       <button class="button">
-        <img src="icons8-italy-100.png" alt="Button" width="100" height="100">
+        <img src="icons8-italy-100.png" alt="Sito Italiano" width="100" height="100">
       </button>
     </a>
-    <a href="https://example.com" target="_blank">
+    <a href="https://withjoy.com/simone-and-giulia/welcome" target="_blank">
       <button class="button">
-        <img src="icons8-great-britain-100.png" alt="Button" width="100" height="100">
+        <img src="icons8-great-britain-100.png" alt="English website" width="100" height="100">
       </button>
     </a>
   </div>
